# governance-rewards

./: .gitignore  Anchor.toml  Cargo.toml  LICENSE  README.md
.github/workflows/: ci-cargo-audit.yml  ci-lint-test.yml  ci-soteria.yml
governance-rewards-client/: Cargo.toml
governance-rewards-client/src/: lib.rs
programs/governance-rewards/: Cargo.toml
programs/governance-rewards-client/: Cargo.toml
programs/governance-rewards-client/src/: lib.rs
programs/governance-rewards/src/: error.rs  lib.rs
programs/governance-rewards/src/client/: mod.rs
programs/governance-rewards/src/instructions/: claim.rs  create_distribution.rs  mod.rs  reclaim_funds.rs  reclaim_user_data.rs  register.rs  update_registration.rs
programs/governance-rewards/src/instructions/escrow/: create.rs  mod.rs  transfer.rs
programs/governance-rewards/src/instructions/preferences/: mod.rs  set_preferred_mint.rs  set_resolution_preference.rs
programs/governance-rewards/src/instructions/reclaim/: mod.rs  reclaim_funds.rs  reclaim_user_data.rs
programs/governance-rewards/src/program_test/: governance_rewards_test.rs  mod.rs  program_test_bench.rs  tools.rs
programs/governance-rewards/src/state/: addin.rs  claim_data.rs  distribution.rs  distribution_option.rs  mod.rs  preferences.rs  total_rewards.rs
programs/governance-rewards/src/state/addin/: mod.rs  temp_override.rs
programs/governance-rewards/tests/: test_claim.rs  test_create_distribution.rs  test_escrow.rs  test_reclaim.rs  test_register.rs
programs/governance-rewards/tests/program_test/: governance_rewards_test.rs  program_test_bench.rs  tools.rs
tests/: governance-rewards.ts
