[package]
edition = "2021"
name = "governance-rewards-client"
version = "0.1.4"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anchor-lang = "0.24.2"
anchor-spl = "0.24.2"
governance-rewards = {path = "../programs/governance-rewards", version = "0.1.4"}
solana-sdk = "^1.9.22"
